Updated: - responsive menu collapse fixed.

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -2145,11 +2145,7 @@ button:hover,
 
 #nav {
     text-align: center;
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
-    height: 4em;
     line-height: 4em;
 }
 
